--- a/go-angular-auth/frontend/frontend1/src/app/app.component.html
+++ b/go-angular-auth/frontend/frontend1/src/app/app.component.html
@@ -1,18 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-
-</head>
-<body>
     <app-header></app-header>
-    <div class="container h-100">
-    <div class="row h-100 justify-content-center align-items-center">
-        <div class="col-10 col-md-8 col-lg-6">
-    <main class="form-signin">
-        <router-outlet></router-outlet>
-      </main> 
-        </div>
-        </div>
-        </div>
-</body>
-</html>
+    <main class="form-signin" >
+      <div>
+        <h3>{{ message }}</h3>
+      </div>
+      <router-outlet></router-outlet>
