--- a/go-angular-auth/frontend/frontend1/src/app/components/header/header.component.html
+++ b/go-angular-auth/frontend/frontend1/src/app/components/header/header.component.html
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-
-</head>
-<body>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
   <div class="container-fluid">
     <a routerLink="/" class="navbar-brand">Home</a>
@@ -17,7 +11,14 @@
           <a routerLink="/register" class="nav-link">Register</a>
         </li>
       </ul>
+
       <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="authenticated">
+        <li class="nav-item">
+          <a routerLink="/edituser" class="nav-link">EditUser</a>
+        </li>
+        <li class="nav-item">
+           <button class="nav-link" (click)="goToUserProfile()" ngbDropdownItem>Profile</button>
+        </li>
         <li class="nav-item">
           <a routerLink="/login" class="nav-link" (click)="logout()">Logout</a>
         </li>
@@ -25,6 +26,3 @@
     </div>
   </div>
 </nav>
-    
-</body>
-</html>
